--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ctgplayer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "To solve puzzles in Calculator: The Game.",
   "main": "main.js",
   "scripts": {
@@ -20,6 +20,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/GLanguage/ctgplayer/issues"
+  },
+  "bin": {
+    "ctgplay": "main.js"
   },
   "homepage": "https://github.com/GLanguage/ctgplayer#readme"
 }
